samples/_failures_safe/1761713700_491b85_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7c5a6fe.c: In function ‘main’:
./samples/SAFE/__tmp_a7c5a6fe.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a7c5a6fe.c:153:9: error: expected declaration or statement at end of input
  153 |         switch
      |         ^~~~~~
./samples/SAFE/__tmp_a7c5a6fe.c:153:9: error: expected declaration or statement at end of input
